nav-align-fixed

--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@ nav {
   flex-direction: column;
   align-items: center;
   position: fixed;
-  padding-top: 1rem;
+  padding: 1rem 0rem;
   top: 0;
   background-color: white;
   width: 100vw;
@@ -35,11 +35,12 @@ nav {
 .resume-download {
   display: flex;
   background-color: transparent;
-  padding: 10px;
+  padding: 0.8rem;
   font-size: 1.2rem;
   font-weight: 500;
+  text-align: center;
   color: rgb(13, 19, 33);
-  border-width: 1px;
+  border: 1px solid rgba(13, 19, 33, 0.445);
   border-radius: 10px;
   cursor: pointer;
 }
@@ -95,7 +96,6 @@ nav {
 }
 .wey-web-description {
   text-align: center;
-  
 }
 .why-web-container {
   display: flex;
